--- a/wp-content/themes/egg/assets/less/_global.less
+++ b/wp-content/themes/egg/assets/less/_global.less
@@ -6,6 +6,10 @@
 
 body{
 	font-family: 'Lato', sans-serif;
+
+	&.zh-hant{
+		font-family: 'Heiti TC Medium', MHeiHK, '微軟正黑體', 'Microsoft JhengHei', SimHei, sans-serif;
+	}
 }
 .noPadding{
 	padding-left:0;
