--- a/wp-content/themes/egg/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_home.less
@@ -17,6 +17,7 @@
 	  text-indent: -9999px;
 	  position: absolute;
 	  top: 50%;
+	  outline: none;
 	}
 	
 	.slick-prev {
@@ -298,6 +299,14 @@
    
   
 }
+
+.zh-hant,.zh-hans{
+	.home-collections .view-all-btn a,
+	.home-new-collection .sectionIntro .section-contents .view-all-btn a,
+	.home-news .view-all-btn a{
+		font-style: normal;
+	}
+} 
 
 //===============================================================================
 //===============================================================================
