--- a/wp-content/themes/egg/assets/less/layouts/pages/_product.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_product.less
@@ -18,7 +18,12 @@
 	.page-title{
 		color:#664400;
 		text-transform: uppercase;
+		h2{
+			margin: 5px 0;
+			  font-size: 36px;
+  			letter-spacing: 3px;
 		}
+	}
 }
 
 #product-content-page{
@@ -33,7 +38,7 @@
 			background-color: #fff;
 			}
 		.product-right-container{
-			padding: 64px 40px;
+			padding: 42px 40px;
 				.product-info {
 				    margin-bottom: 30px;
 				    padding: 0 6px;
@@ -65,8 +70,8 @@
 		#product-slider{
 			
 			.product-slider-item{
-				padding-left: 5px;
-		    	padding-right: 5px;
+				padding-left: 2px;
+		    	padding-right: 2px;
 				img{
 					width:100%;
 					height:auto;}
@@ -76,20 +81,22 @@
 			  z-index: 100;
 			  text-indent: -9999px;
 			  position: absolute;
-			  top: 45%;
+			  top: 50%;
 			  
 			  background-size: cover;
 			  width: 21px;
 			  height: 24px;
+			  margin-top: -12px;
+			  outline: none;
 			}
 			
 			.slick-prev {
 			  background: url(../img/arrow-left-triangle.png) no-repeat transparent center;
-			  left:-8%;
+			  left:-30px;
 			}
 			.slick-next{
 			  background: url(../img/arrow-right-triangle.png) no-repeat transparent center;
-			  right: -8%;
+			   right: -30px;
 			}
 			
 			
@@ -161,7 +168,7 @@
 		
 		#product-slider{
 			.slick-prev, .slick-next {
-				  top: 17%;
+				  /*top: 17%;*/
 				}
 			}
 		
@@ -184,7 +191,7 @@
 	.product-container{
 		#product-slider{
 			.slick-prev, .slick-next {
-				  top: 30%;
+				  /*top: 30%;*/
 				}
 			}
 		
