--- a/wp-content/themes/egg/assets/less/_global.less
+++ b/wp-content/themes/egg/assets/less/_global.less
@@ -44,7 +44,9 @@ body{
 		}
 	}
 }
- 
+
+#news-page .container, #collection-content-page{  padding: 70px 15px;}
+
 
 //===============================================================================
 //===============================================================================
