--- a/wp-content/themes/egg/assets/less/layouts/pages/_collection.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_collection.less
@@ -3,46 +3,63 @@
 // Base
 //===============================================================================
 //===============================================================================
-#news-page{
-  background-color:#e6e4e0;
-  
-	
-	.container{
-	  
-	  	.news-container{
-			background-color:#fff;
-			margin:0 0 50px 0;
-				.left-content-container{
-					padding-top: 20px;
-					padding-bottom: 20px;
-						.post-img img{
-							width:100%;
+
+#collection-content-page{
+	.collection-box{
+		display:block;
+		margin-bottom:50px;
+		.single-collection-img {
+			display:block;
+			padding:10px 10px 0 10px;
+			background-color: #cdcac3;
+				img{width:100%;}
+				a{
+					position:relative;
+					display:block;
+					img{border:1px solid #fff;width:100%;height:auto;}
+					
+			}
+			.overlay{
+						background:rgba(42,28,0,0.8);
+						width:100%;
+						height:100%;
+						opacity:0;
+						position:absolute; 
+						-webkit-transition: opacity .25s ease;
+						-moz-transition: opacity .25s ease;
+						display:block;
+						color:#fff;
+						font-size:20px;
+						text-align:center;
+						border:1px solid #fff;
+							p{position:relative; top:43%;}
 						}
 					}
-				.right-content-container{
-					padding: 0px 20px;;
-						h4{ 
-							margin-top: 3px;
-						}
-						.news-content-container{
-						}
-						.expend-btn{
-							cursor:pointer;display:
-							inline-block;
-							margin:10px 0;
-							float: right;
-							background-image:url(../img/icon-expend.png);
-							width:56px;
-							height:56px;
-						}
-						.expended{background-image:url(../img/icon-expended.png);}
-				}
-				
-		}
-		
-	 }
- 
+		.single-collection-title{
+			display:block;
+			background-color:#cdcac3;
+			margin:0;
+			text-align:center;
+			letter-spacing: 1px;
+				h3{margin:0;
+					a{color:#000;  display: block;
+					  padding: 15px 10px;
+					  &:hover{text-decoration:none;}
+					  }
+					}
+			}
+		&:hover{
+			.single-collection-img {background-color: #998761;}
+			.single-collection-title h3{background-color:#998761;}
+			.overlay{opacity:1;}
+			}
+	}
+	
+	
+	
 }
+
+
 //===============================================================================
 //===============================================================================
 // tablet
@@ -50,17 +67,18 @@
 //===============================================================================
 @media (min-width: @screen-sm-min) {
 
-#news-page{
-
-	.container{
-	  	.row{
-				.right-content-container{
-					padding: 20px 30px;
-					}
+#collection-content-page{
+	.collection-box{
+		.single-collection-img {
+			a{
+				.overlay{
+					p{position:relative; top:30%;}
+				}
 			}
+		}
 	}
-
 }
+
 
 }
 //===============================================================================
@@ -69,6 +87,20 @@
 //===============================================================================
 //===============================================================================
 @media (min-width: @screen-md-min) {
+
+
+#collection-content-page{
+	.collection-box{
+		.single-collection-img {
+			a{
+				.overlay{
+					p{position:relative; top:45%;}
+				}
+			}
+		}
+	}
+}
+
 
 }
 
