--- a/wp-content/themes/egg/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_home.less
@@ -91,8 +91,8 @@
   	padding: 10px;
 		.post-img img {width:100%;}
 		.post-title {
-			margin:8px 0;
-			height: 63px;
+			margin:8px 0 0 0;
+			height: 50px;
 			
 			display: -webkit-box;
 			-webkit-line-clamp: 3;
@@ -100,8 +100,14 @@
 			max-height: 73px; /* I needed this to get it to work */
 			overflow: hidden;
   
-			a{color:#666666;}
+			a{color:#666666;display: block;
+				p{margin:0;}
+				}
 			}
+	&:hover{
+		background-color: #998761;
+		.post-title a {color:#fff;text-decoration:none;}
+		}
 	}
 	
 	.slick-prev, .slick-next {
@@ -212,13 +218,13 @@
 .home-collections {
   background-color: #e6e4e0;
   margin: 45px auto 80px;
-  padding: 40px 0px 10px;
+  padding: 59px 0px 40px;
   .section-title{
 	text-align: center;
 	position: absolute;
 	left: 0;
 	right: 0;
-	top: -67px;
+	top: -89px;
 	
 	h2{
 	  color: #664400;
@@ -239,7 +245,7 @@
 	position: absolute;
 	left: 0;
 	right: 0;
-	bottom: -33px;
+	bottom: -63px;
 	 
 		a{
 		  color: #000;
@@ -253,6 +259,19 @@
 		  font-style: italic;
 		}
 	}
+   .section-contents{
+   	.single-collection {
+	  border: 1px solid #fff;
+	  margin-bottom: 30px;
+	  	.single-collection-img img{width:100%;height:auto;padding:10px;}
+	  	.single-collection-title h3{background-color:#fff;margin:0;text-align:center;
+	  		a{
+	  			color:#000;padding:10px;display: block;
+	  			&:hover{text-decoration:none;}	
+	  				}
+	  		}
+	}
+   }
 }
 
 .home-find-store{
