--- a/wp-content/themes/egg/assets/less/main.less
+++ b/wp-content/themes/egg/assets/less/main.less
@@ -19,6 +19,7 @@
 @import "layouts/_posts";            // Post styling
 @import "layouts/pages/_news";       // News page styling
 @import "layouts/pages/_product";       // Product content page styling
+@import "layouts/pages/_collection";       // Collection page styling 
 
 // header+footer styles
 @import "navmenu.less";
