--- a/wp-content/themes/egg/assets/less/layouts/pages/_collection.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_collection.less
@@ -50,7 +50,12 @@
 			}
 		&:hover{
 			.single-collection-img {background-color: #998761;}
-			.single-collection-title h3{background-color:#998761;}
+			.single-collection-title h3{
+				background-color:#998761;
+				a{
+					color:#fff;
+				}
+			}
 			.overlay{opacity:1;}
 			}
 	}
