--- a/wp-content/themes/egg/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_home.less
@@ -3,6 +3,9 @@
 // Base
 //===============================================================================
 //===============================================================================
+.slick-prev, .slick-next {
+	outline: 0;
+}
 #main-banner {
   position: relative;
 	
@@ -26,7 +29,6 @@
 	  text-indent: -9999px;
 	  position: absolute;
 	  top: 50%;
-	  outline: none;
 	  background-size: cover;
 	  width: 30px;
 	  height: 30px;
@@ -55,6 +57,7 @@
 				line-height: 30px;
 				text-transform: uppercase;
 				padding: 0 26px;
+				letter-spacing: 1px;
 			}
 	}
 	
@@ -63,6 +66,11 @@
   background-color: #e6e4e0;
   margin: 45px auto 80px;
   padding: 50px 0px 63px;
+
+  .slick-slider{
+	padding-left: 20px;
+  	padding-right: 20px;
+}
   
   .section-title{
 	text-align: center;
@@ -91,7 +99,7 @@
 		.post-img img {width:100%;}
 		.post-title {
 			margin:8px 0 0 0;
-			height: 50px;
+			height: 60px;
 			
 			display: -webkit-box;
 			-webkit-line-clamp: 3;
@@ -111,11 +119,11 @@
 	
 	.slick-prev {
 	  background: url(../img/arrow-left-brown.png) no-repeat transparent center;
-	  left:-3%;
+	  left:-3px;
 	}
 	.slick-next{
 	  background: url(../img/arrow-right-brown.png) no-repeat transparent center;
-	  right: -3%;
+	  right: -3px;
 	}
 	
 		
@@ -259,12 +267,25 @@
 	}
    .section-contents{
    	.single-collection {
-	  border: 1px solid #fff;
+	  /*border: 1px solid #fff;*/
+	  background-color: #fff;
 	  margin-bottom: 30px;
+	  &:hover{
+		background-color: #998761;
+		.single-collection-title h3 a{
+			color:#fff;
+		}
+	 }
 	  	.single-collection-img img{width:100%;height:auto;padding:10px;}
-	  	.single-collection-title h3{background-color:#fff;margin:0;text-align:center;
+	  	.single-collection-title h3{/*background-color:#fff;*/
+	  		margin:0;
+	  		text-align:center;
+	  		font-size: 20px;
 	  		a{
-	  			color:#000;padding:10px;display: block;
+	  			color:#000;
+	  			padding:10px;
+	  			display: block;
+	  			padding-top: 0;
 	  			&:hover{text-decoration:none;}	
 	  				}
 	  		}
@@ -353,7 +374,7 @@
   			font-size: 29px;
 		}
 		.section-contents p{
-			font-size: 17px;
+			font-size: 15px;
 		}
 	} 
 }
@@ -373,21 +394,16 @@
 	}
 }
 .home-news {
+
   .section-title{
   	h2{
 		font-size:30px;
 	  }
 	}
 
-	.slick-prev {
-	  width: 50px;
-	  height: 49px;
-	  left:-7%;
-	}
-	.slick-next{
-	  width: 50px;
-	  height: 49px;
-	  right:-7%;
+	.slick-slider{
+		/*padding-left: 0;
+  		padding-right: 0;*/
 	}
 	
 }
@@ -426,11 +442,25 @@
 	  }
 	}
 
-	.slick-prev {
+	/*.slick-prev {
 	  left:-10%;
 	}
 	.slick-next{
 	  right:-10%;
+	}*/
+	.slick-slider{
+		padding: 0;
+	}
+
+	.slick-prev {
+	  width: 50px;
+	  height: 49px;
+	  left:-7%;
+	}
+	.slick-next{
+	  width: 50px;
+	  height: 49px;
+	  right:-7%;
 	}
 	
 }
