--- a/wp-content/themes/egg/assets/less/layouts/pages/_news.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_news.less
@@ -23,6 +23,7 @@
 					padding: 0px 20px;;
 						h4{ 
 							margin-top: 3px;
+							font-weight: 700;
 						}
 						.news-content-container{
 						}
