--- a/wp-content/themes/egg/assets/less/layouts/pages/_product.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_product.less
@@ -37,6 +37,34 @@
 			padding-bottom:20px;
 			background-color: #fff;
 				img{width:100%;height:auto;}
+			
+			
+				.slick-prev {
+				  background: url(../img/arrow-left-triangle.png) no-repeat transparent center;
+				  left:5px;
+					&:hover{ background: url(../img/arrow-left-triangle-hover.png) no-repeat transparent center;}
+				}
+				.slick-next{
+				  background: url(../img/arrow-right-triangle.png) no-repeat transparent center;
+				  right: 5px;
+					&:hover{ background: url(../img/arrow-right-triangle-hover.png) no-repeat transparent center;}
+				}
+			
+				.slick-prev, .slick-next {
+				  border: none;
+				  z-index: 100;
+				  text-indent: -9999px;
+				  position: absolute;
+				  top: 50%;
+			  
+				  background-size: cover;
+				  width: 21px;
+				  height: 24px;
+				  margin-top: -12px;
+				  outline: none;
+				}
+			
+			
 			}
 		.product-right-container{
 			padding: 42px 40px;
@@ -83,6 +111,19 @@
 					width:100%;
 					height:auto;}
 			}
+			
+			
+			.slick-prev {
+			  background: url(../img/arrow-left-triangle.png) no-repeat transparent center;
+			  left:-30px;
+			  	&:hover{ background: url(../img/arrow-left-triangle-hover.png) no-repeat transparent center;}
+			}
+			.slick-next{
+			  background: url(../img/arrow-right-triangle.png) no-repeat transparent center;
+			  right: -30px;
+			   	&:hover{ background: url(../img/arrow-right-triangle-hover.png) no-repeat transparent center;}
+			}
+			
 			.slick-prev, .slick-next {
 			  border: none;
 			  z-index: 100;
@@ -95,17 +136,6 @@
 			  height: 24px;
 			  margin-top: -12px;
 			  outline: none;
-			}
-			
-			.slick-prev {
-			  background: url(../img/arrow-left-triangle.png) no-repeat transparent center;
-			  left:-30px;
-			  	&:hover{ background: url(../img/arrow-left-triangle-hover.png) no-repeat transparent center;}
-			}
-			.slick-next{
-			  background: url(../img/arrow-right-triangle.png) no-repeat transparent center;
-			  right: -30px;
-			   	&:hover{ background: url(../img/arrow-right-triangle-hover.png) no-repeat transparent center;}
 			}
 			
 			
