--- a/wp-content/themes/egg/assets/less/layouts/pages/_services.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_services.less
@@ -12,6 +12,7 @@
 	  padding: 15px 0px;
 	  	h3{  margin-top: 10px;margin-bottom: 25px;font-weight: 700;}
 	  	.right-content-container{ padding-left:15px;padding-right:15px;}
+	  	.left-content-container img{width:100%;} 
 	}
 }
 //===============================================================================
