--- a/wp-content/themes/egg/assets/less/main.less
+++ b/wp-content/themes/egg/assets/less/main.less
@@ -20,7 +20,9 @@
 @import "layouts/pages/_news";       // News page styling
 @import "layouts/pages/_product";    // Product content page styling
 @import "layouts/pages/_collection"; // Collection page styling 
-@import "layouts/pages/_services";   // Services page styling 
+@import "layouts/pages/_services";   // Services page styling
+@import "layouts/pages/_contact";   // Services page styling 
+@import "layouts/pages/_careers";   // Services page styling 
 
 // header+footer styles
 @import "navmenu.less";
