--- a/wp-content/themes/egg/assets/css/main.css
+++ b/wp-content/themes/egg/assets/css/main.css
@@ -6663,7 +6663,9 @@ body.zh-hant {
 }
 #news-page .container,
 #collection-content-page,
-#services-page .container {
+#services-page .container,
+#career-page .container,
+#contact-page .container {
   padding: 70px 15px;
 }
 @media (min-width: 768px) {
@@ -7455,11 +7457,65 @@ figure.alignnone {
   padding-left: 15px;
   padding-right: 15px;
 }
+#services-page .services-container .left-content-container img {
+  width: 100%;
+}
 @media (min-width: 992px) {
   #services-page .services-container .right-content-container {
     padding-left: 30px;
     padding-right: 30px;
   }
+}
+#contact-page {
+  background-color: #e6e4e0;
+}
+#contact-page .contact-info {
+  padding-top: 30px;
+  padding-bottom: 50px;
+  text-align: center;
+}
+#contact-page .contact-info i {
+  border: 1px solid #664400;
+  padding: 20px;
+  width: 100%;
+  margin-bottom: 11px;
+  color: #664400;
+}
+#contact-page .contact-info a {
+  display: block;
+  color: #664400;
+  font-size: 16px;
+  word-wrap: break-word;
+}
+#contact-page .contact-form {
+  background-color: #fff;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  text-align: center;
+}
+#career-page {
+  text-align: center;
+}
+#career-page h3 {
+  color: #999999;
+  text-transform: uppercase;
+  margin-bottom: 24px;
+  margin-top: 24px;
+}
+#career-page p {
+  color: #664400;
+  font-size: 15px;
+  letter-spacing: 1px;
+}
+#career-page .career-content {
+  margin-bottom: 30px;
+  margin-top: 20px;
+}
+#career-page .career-post {
+  border: 1px solid #640;
+  padding: 40px 20px;
+  margin-bottom: 30px;
+  margin-top: 20px;
 }
 .container {
   position: relative;
