--- a/wp-content/themes/egg/assets/less/layouts/pages/_careers.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_careers.less
@@ -3,66 +3,27 @@
 // Base
 //===============================================================================
 //===============================================================================
-
-body{
-	font-family: 'Lato', sans-serif;
-
-	&.zh-hant{
-		font-family: 'Heiti TC Medium', MHeiHK, '微軟正黑體', 'Microsoft JhengHei', SimHei, sans-serif;
-	}
+#career-page{
+	text-align:center;
+	h3{color:#999999;text-transform: uppercase;  margin-bottom: 24px; margin-top: 24px;}
+ 	p{color:#664400;font-size: 15px;letter-spacing: 1px;}
+ 	.career-content{
+ 		margin-bottom: 30px;
+  		margin-top: 20px;}
+ 	.career-post{
+ 		border:1px solid #640;
+ 		padding: 40px 20px;
+ 		margin-bottom: 30px;
+  		margin-top: 20px; }
 }
-.noPadding{
-	padding-left:0;
-	padding-right:0;
-}
-
-.page-head-container{
-	position:relative;
-	img{ 
-		display: block;
-		width: 100%;
-		height: auto;}
-	.page-title{
-		text-align: center;
-		position: absolute;
-		left: 0;
-		right: 0;
-		bottom: -23px;
-		
-		h2{
-		  color: #664400;
-		  text-transform: uppercase;
-		  font-weight: bold;
-		  border: 1px solid #664400;
-		  padding: 10px 37px;
-		  background-color: #fff;
-		  letter-spacing: 3px;
-		  margin-top: 0;
-		  margin-bottom: 0;
-		  display: inline-block;
-		  font-size: 23px;
-		}
-	}
-}
-
-#news-page .container, 
-#collection-content-page, 
-#services-page .container,
-#career-page .container,
-#contact-page .container{  padding: 70px 15px;}
-
- 
 //===============================================================================
 //===============================================================================
 // tablet
 //===============================================================================
 //===============================================================================
 @media (min-width: @screen-sm-min) {
-.page-head-container{
-	.page-title{
-		h2{padding: 10px 80px;}
-		}
-}
+
+
 }
 //===============================================================================
 //===============================================================================
