--- a/wp-content/themes/egg/assets/less/layouts/pages/_contact.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_contact.less
@@ -3,66 +3,44 @@
 // Base
 //===============================================================================
 //===============================================================================
-
-body{
-	font-family: 'Lato', sans-serif;
-
-	&.zh-hant{
-		font-family: 'Heiti TC Medium', MHeiHK, '微軟正黑體', 'Microsoft JhengHei', SimHei, sans-serif;
-	}
-}
-.noPadding{
-	padding-left:0;
-	padding-right:0;
-}
-
-.page-head-container{
-	position:relative;
-	img{ 
-		display: block;
-		width: 100%;
-		height: auto;}
-	.page-title{
-		text-align: center;
-		position: absolute;
-		left: 0;
-		right: 0;
-		bottom: -23px;
+#contact-page{
+	  background-color: #e6e4e0;
+	.contact-info {
 		
-		h2{
-		  color: #664400;
-		  text-transform: uppercase;
-		  font-weight: bold;
-		  border: 1px solid #664400;
-		  padding: 10px 37px;
-		  background-color: #fff;
-		  letter-spacing: 3px;
-		  margin-top: 0;
-		  margin-bottom: 0;
-		  display: inline-block;
-		  font-size: 23px;
-		}
-	}
+  		padding-top: 30px;
+  		padding-bottom: 50px;
+  		text-align:center;
+  			i{
+  				border: 1px solid #664400;
+				padding: 20px;
+				width: 100%;
+				margin-bottom: 11px;
+				color: rgb(102, 68, 0);
+  				}
+  			a{
+  				display: block;
+				  color: rgb(102, 68, 0);
+				  font-size: 16px;
+				  word-wrap: break-word;
+  				}
+  		}
+  	
+  	.contact-form{ 
+  		background-color: #fff;
+  		padding-top: 50px;
+  		padding-bottom: 50px;
+  		text-align:center;
+  		}
 }
-
-#news-page .container, 
-#collection-content-page, 
-#services-page .container,
-#career-page .container,
-#contact-page .container{  padding: 70px 15px;}
-
- 
 //===============================================================================
 //===============================================================================
 // tablet
 //===============================================================================
 //===============================================================================
 @media (min-width: @screen-sm-min) {
-.page-head-container{
-	.page-title{
-		h2{padding: 10px 80px;}
-		}
-}
+
+
+
 }
 //===============================================================================
 //===============================================================================
