--- a/wp-content/themes/egg/assets/css/main.css
+++ b/wp-content/themes/egg/assets/css/main.css
@@ -7493,6 +7493,20 @@ figure.alignnone {
   padding-bottom: 50px;
   text-align: center;
 }
+#contact-page .contact-form input[type="reset"] {
+  background-color: #93908c;
+  border: none;
+  color: #fff;
+  padding: 11px 44px;
+  margin-left: 10px;
+}
+#contact-page .contact-form input[type="submit"] {
+  background-color: #664400;
+  border: none;
+  color: #fff;
+  padding: 11px 44px;
+  margin-left: 10px;
+}
 #career-page {
   text-align: center;
 }
