--- a/wp-content/themes/egg/assets/less/layouts/pages/_contact.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_contact.less
@@ -30,6 +30,21 @@
   		padding-top: 50px;
   		padding-bottom: 50px;
   		text-align:center;
+  		
+  			input[type="reset"] {
+			  background-color: #93908c;
+			  border: none;
+			  color: #fff;
+			  padding: 11px 44px;
+			  margin-left: 10px;
+			}
+			input[type="submit"] {
+			  background-color: #664400;
+			  border: none;
+			  color: #fff;
+			  padding: 11px 44px;
+			  margin-left: 10px;
+			}
   		}
 }
 //===============================================================================
