--- a/wp-content/themes/egg/assets/less/_global.less
+++ b/wp-content/themes/egg/assets/less/_global.less
@@ -11,6 +11,17 @@ body{
 		font-family: 'Heiti TC Medium', MHeiHK, '微軟正黑體', 'Microsoft JhengHei', SimHei, sans-serif;
 	}
 }
+
+.content-container{
+	h3{
+		font-weight: 700;
+	}
+	a{
+		color: #333333;
+		text-decoration: underline;
+	}
+}
+
 .noPadding{
 	padding-left:0;
 	padding-right:0;
