--- a/wp-content/themes/egg/assets/less/layouts/pages/_collection.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_collection.less
@@ -42,9 +42,12 @@
 			text-align:center;
 			letter-spacing: 1px;
 				h3{margin:0;
-					a{color:#000;  display: block;
-					  padding: 15px 10px;
-					  &:hover{text-decoration:none;}
+					a{
+						color:#000;
+						display: block;
+					  	padding: 15px 10px;
+					  	font-size: 20px;
+					  	&:hover{text-decoration:none;}
 					  }
 					}
 			}
