--- a/wp-content/themes/egg/assets/less/layouts/pages/_news.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_news.less
@@ -33,8 +33,9 @@
 							margin:10px 0;
 							float: right;
 							background-image:url(../img/icon-expend.png);
-							width:46px;
-							height:46px;
+							width:30px;
+							height:30px;
+							background-size: cover;
 						}
 						.expended{background-image:url(../img/icon-expended.png);}
 				}
